# SuperDemo

./: build.gradle  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kelinlang/superdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kelinlang/superdemo/: MainActivity.java
app/src/main/jni/: com_kelinlang_superdemo_MainActivity.h  test-lib.c  test.h
app/src/main/jni/include/: ttt-lib.c  ttt-lib.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kelinlang/superdemo/: ExampleUnitTest.java
commonlib/: build.gradle
commonlib/src/androidTest/java/com/kelinlang/commonlib/: ExampleInstrumentedTest.java
commonlib/src/main/: AndroidManifest.xml
commonlib/src/main/assets/: logback.xml
commonlib/src/main/java/com/kelinlang/commonlib/log/: DLog.java
commonlib/src/main/java/com/kelinlang/commonlib/utils/dimen/: DensityUtil.java  DimenUtils.java
commonlib/src/main/java/com/kelinlang/commonlib/utils/json/: DataJsonTranslation.java
commonlib/src/test/java/com/kelinlang/commonlib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mjpeg/: CMakeLists.txt  build.gradle  proguard-rules.pro
mjpeg/src/androidTest/java/com/kelinlang/mjpeg/: ExampleInstrumentedTest.java
mjpeg/src/main/: AndroidManifest.xml
mjpeg/src/main/java/com/camera/simplemjpeg/: MjpegActivity.java  MjpegInputStream.java  MjpegView.java  SettingsActivity.java
mjpeg/src/main/java/com/kelinlang/mjpeg/: MainActivity.java
mjpeg/src/main/res/layout/: activity_main.xml  main.xml
mjpeg/src/test/java/com/kelinlang/mjpeg/: ExampleUnitTest.java
network/: CMakeLists.txt  build.gradle
network/src/androidTest/java/com/kelinlang/network/: ExampleInstrumentedTest.java
network/src/main/: AndroidManifest.xml
network/src/main/java/com/kelinlang/network/socket/: SocketDemo.java
network/src/main/jni/: com_kelinlang_network_socket_SocketDemo.h  socket-lib.c  socket-lib.h
network/src/main/jni/socket/: SimpleClient.c  SimpleClient.h  SimpleServer.c  SimpleServer.h
network/src/main/jni/utils/: string-uitls.c  string-uitls.h  time-utils.h
network/src/test/java/com/kelinlang/network/: ExampleUnitTest.java
rtmp/: CMakeLists.txt  build.gradle
rtmp/src/androidTest/java/com/kelinlang/rtmp/: ExampleInstrumentedTest.java
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/jni/: rtmp-lib.c  rtmp-lib.h
rtmp/src/main/jni/RtmpDump/: CMakeLists.txt  rtmpdump.c
rtmp/src/main/jni/RtmpDump/librtmp/: log.h  rtmp.c
rtmp/src/main/jni/log/: log.h
rtmp/src/main/jni/utils/: time-utils.c
rtmp/src/main/res/values/: strings.xml
rtmpdump-android/: CMakeLists.txt  build.gradle
rtmpdump-android/src/androidTest/java/com/kelinlang/rtmp/: ExampleInstrumentedTest.java
rtmpdump-android/src/main/: AndroidManifest.xml
rtmpdump-android/src/main/java/com/schriek/rtmpdump/: HelpFragment.java  LogFragment.java  MainActivity.java
rtmpdump-android/src/main/jni/dump/: rtmpdump.c  rtmpdump.h
rtmpdump-android/src/main/res/layout/: activity_main.xml
rtmpdump-android/src/main/res/values/: strings.xml
rtmpdump-android/src/test/java/com/kelinlang/rtmp/: ExampleUnitTest.java
viewapp/: build.gradle  proguard-rules.pro
viewapp/src/androidTest/java/com/kelinlang/viewapp/: ExampleInstrumentedTest.java
viewapp/src/main/: AndroidManifest.xml
viewapp/src/main/java/com/kelinlang/test/: FlowParamSync.java  PackageFlowReportInfo.java  PackagesFlowReportInfo.java
viewapp/src/main/java/com/kelinlang/viewapp/: MainActivity.java
viewapp/src/main/java/com/kelinlang/viewapp/activity/: AirHockeyActivity.java
viewapp/src/main/java/com/kelinlang/viewapp/opengl/: AirHockeyRenderer.java
viewapp/src/main/java/com/kelinlang/viewapp/view/: NinePhotoView.java  RoundImageView.java  TasksCompletedView.java
viewapp/src/main/res/layout/: activity_main.xml  activity_test_open_gl.xml  content_main.xml
viewapp/src/main/res/menu/: menu_main.xml
viewapp/src/main/res/raw/: simple_fragment_shader.glsl  simple_vertex_shader.glsl
viewapp/src/main/res/values/: attrs.xml  colors.xml  strings.xml
viewapp/src/test/java/com/kelinlang/viewapp/: ExampleUnitTest.java
